[gd_scene load_steps=7 format=3 uid="uid://cheupo7dd4ako"]

[ext_resource type="Texture2D" uid="uid://cm7rlgakql6ms" path="res://arts/spritesheets/effects/Retro Impact Effect Pack 2 A.png" id="1_46qy7"]
[ext_resource type="Script" path="res://scripts/fire_effect.gd" id="1_ssato"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3rbvr"]
radius = 17.0

[sub_resource type="Animation" id="Animation_rs53v"]
resource_name = "fire"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [15, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [10.0, 17.0, 28.0, 33.0, 36.0]
}

[sub_resource type="Animation" id="Animation_305r1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [53]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [17.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hxn6s"]
_data = {
"RESET": SubResource("Animation_305r1"),
"fire": SubResource("Animation_rs53v")
}

[node name="fire_effect" type="Area2D"]
scale = Vector2(2, 2)
script = ExtResource("1_ssato")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3rbvr")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_46qy7")
hframes = 10
vframes = 18
frame = 53

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hxn6s")
}
autoplay = "fire"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
